RESOLVED FIXED249613
[UI-side compositing] Wheel events sent to the web process need to sometimes trigger scrolling
https://bugs.webkit.org/show_bug.cgi?id=249613
Summary [UI-side compositing] Wheel events sent to the web process need to sometimes ...
Simon Fraser (smfr)
Reported 2022-12-19 15:48:27 PST
If a wheel event hits the non-fast-scrollable area, then we need to send the events with the correct "processing steps" to the web process so we know whether to run the scrolling logic.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-19 15:49:14 PST
Simon Fraser (smfr)
Comment 2 2022-12-19 16:32:33 PST
EWS
Comment 3 2022-12-20 10:27:22 PST
Committed 258145@main (815e52db702d): <https://commits.webkit.org/258145@main> Reviewed commits have been landed. Closing PR #7883 and removing active labels.
Fujii Hironori
Comment 4 2022-12-20 17:02:44 PST
Bug 249687 – [WinCairo] REGRESSION(258145@main) wheel events can't scroll the page
Note You need to log in before you can comment on or make changes to this bug.